--- a/index.html
+++ b/index.html
@@ -21,17 +21,21 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>MyName's Homepage 111</h1>
+			<h1>Scarlett's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img class="cat-photo" src="./img/cute-grey-kitten.jpg">
+					<img class="photo" src="img/Picture copy.JPG" 
+     width="400" 
+     height="500" />
+
 					<h2>About Me</h2>
-					<p>Tell us about yourself. Add photos. Customize this. Go crazy.</p>
+					<p>My name is Scarlett I am an art history major.</p>
 			</div>
 
 		</section>
 		<nav id="links">
 			<!-- Put links to labs here. -->
+
 		</nav>
 	</main>
 </body>
