--- a/Lab10/index.html
+++ b/Lab10/index.html
@@ -11,18 +11,17 @@
         <div id="content">
             <h1>Lab 10: JavaScript for the Web</h1>
             <p>Working with your partner, experiment with modifying the DOM.</p>
+            <p>We figured out how to make a button and make it make random text by adding an event listener,</p>
             <h2>Challenges</h2>
+             <p>I had written a mistake into the file structure and couldnt find the file. I reorganized and solved the problem. </p>
             <p> make a button to generate text</p>
             <h2>Results</h2>
-            <p></p>
+            <p> we were able to make a button that worked.</p>
             <div id="output"></div>
             <button id="make-convo">My button</button>
             <div class="linkbox">
                 <a class="homelink" href="../index.html">&lt;&lt; Back home</a>
                
-               111
-                <input  type="text" id="user-name" placeholder="Input your name">
-                <button id="submit">Submit</button>
                
         </div>
     </body>
