--- a/experiments/index.html
+++ b/experiments/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
-
-<h1 id = "title"> hello World! </h1>
-<id="my-button"></id>
+    <body>
+<h1 id = "title"> Hello World! </h1>
+<input type="text" id= "input"><br>
+<button id="my-button">Button</id>
+</body>
