--- a/lab11/index.html
+++ b/lab11/index.html
@@ -13,16 +13,7 @@
 <input type="submit" value="A submit button">
 <button>A button element</button>
 
-<html>
-<head>
-    <body>
-<h1 id = "title"> Hello World! </h1>
-<input type="text" id= "input"><br>
-<button id="my-button">Button</id>
-</body>
-<!DOCTYPE html>
-<html>
-<head>
+
 	<!-- This title is used for tabs and bookmarks -->
 	<title>Lab X - Subject/Topic</title>
 
@@ -42,6 +33,9 @@
 	<script type="text/javascript" src="./js/lab.js" DEFER></script>
 </head>
 <body>
+    <div id="output"></div>
+    <input  type="text" id="user-name" placeholder="Input your name">
+    <button id="submit">Submit</button>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
@@ -49,20 +43,24 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
+                    Create and append a button within a string.
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+                    I misread a file name and couldn't properly link my append and button. 
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
 			</div>
+            I'm going to ask about my button not working in class tommorow, but I learned more about how to make a button.
 
 			<div class="minor-section">
 					<h2>Results</h2>
+                    We were able to create a button and text feild.
 					<div id="output"></div>
 			</div>
 		</section>
