--- a/opps 4/index.html
+++ b/opps 4/index.html
@@ -23,40 +23,28 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			
-			<img src="/Users/scarlie/Desktop/art101/img/crv.jpeg" width="200px">
-
-			<h1>Lab 5 - Data Types and Variables</h1>
+			<h1>Lab X - Subject/Topic</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>I created an input and output with variables </p>
+					<p>Restate the challenge of the lab here.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
-					<p>I had to redo the assignment with a working github link</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-					<p> once I was redirectedd, the project went well</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
 					<div id="output"></div>
-					<p> I was able to make the files and oublish them
-					</p>
-				</div class= "script output">
-		<p> Make: Honda
-			Model: CRV
-			Color: Blue
-			Year: 2008
-			Age: 15
-		</p>
-	
+			</div>
+		</section>
+		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
 		</nav>
 	</main>
