--- a/lab5/index.html
+++ b/lab5/index.html
@@ -23,28 +23,40 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			
+			<img src="/Users/scarlie/Desktop/art101/img/crv.jpeg" width="200px">
+
+			<h1>Lab 5 - Data Types and Variables</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>I created an input and output with variables </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+					<p>I had to redo the assignment with a working github link</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p> once I was redirectedd, the project went well</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
 					<div id="output"></div>
-			</div>
-		</section>
-		<nav id="links">
+					<p> I was able to make the files and oublish them
+					</p>
+				</div class= "script output">
+		<p> Make: Honda
+			Model: CRV
+			Color: Blue
+			Year: 2008
+			Age: 15
+		</p>
+	
 			<!-- Put links to other pages (including the homepage) here. -->
 		</nav>
 	</main>
