--- a/homepage/index.html
+++ b/homepage/index.html
@@ -24,9 +24,9 @@
 			<h1>Scarlett's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img class="photo" src="img/Picture copy.JPG" 
+					<img class="photo" src="img/Picture copy.JPG"
      width="350" 
-     height="500" />
+     height="500" >
 
 					<h2>About Me</h2>
 					<p>My name is Scarlett I am an art history major.</p>
@@ -35,7 +35,7 @@
 		</section>
 		<nav id="links">
 			<!-- Put links to labs here. -->
-		
+			/Users/scarlie/Desktop/art101/lab1
 		</nav>
 	</main>
 </body>
