--- a/lab6/index.html
+++ b/lab6/index.html
@@ -23,25 +23,38 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab 6 - Arrays</h1>
+			<h1>Lab 6 - Arrays and Objects</h1>
+			<img src="/Users/scarlie/Desktop/art101/img/crv.jpeg" width="200px">
+
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>Create a data set of arrays and create objects.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+					<p> I had to resubmit with a working site</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p> I was able to complete the arrays and make objects</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+					<div id="output">
+						<p> Kinds of transportantion I use: honda crv
+							
+							Make: Honda
+							Model: CRV
+							Color: Blue
+							Year: 2008
+							
+						</p>
+					</div>
 			</div>
 		</section>
 		<nav id="links">
