--- a/lab14/index.html
+++ b/lab14/index.html
@@ -1,8 +1,21 @@
-<!DOCTYPE html>
-<html>
 <head>
+    <link rel="stylesheet" type="text/css" href="../css/site.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="lab.js" DEFER></script>
+</head>
+<div id="output"></div>
+<input  type="text" id="user-name" placeholder="Input your name">
+<button id="submit">Submit</button>
+
+
+ 
+<input type="submit" value="A submit button">
+<button>A button element</button>
+
+
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 9 - Subject/Topic</title>
+	<title>Lab X - Subject/Topic</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -20,29 +33,36 @@
 	<script type="text/javascript" src="./js/lab.js" DEFER></script>
 </head>
 <body>
+    <div id="output"></div>
+    <input  type="text" id="user-name" placeholder="Input your name">
+    <button id="submit">Submit</button>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab 9 - Subject/Topic</h1>
+			<h1>Lab 14 - Debugging
+            
+            </h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
-                    <button id='button-challenge'>Make Special</button>"
+                    Create and append a button within a string.
 			</div>
-            
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+                    I misread a file name and couldn't properly link my append and button. 
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
 			</div>
+            I'm going to ask about my button not working in class tommorow, but I learned more about how to make a button.
 
 			<div class="minor-section">
 					<h2>Results</h2>
+                    We were able to create a button and text feild.
 					<div id="output"></div>
 			</div>
 		</section>
