--- a/lab15/index.html
+++ b/lab15/index.html
@@ -1,8 +1,10 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 9 - </title>
+	<title>Lab 15 ajax</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,83 +25,53 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab 7 </h1>
+			<h1>Lab 15: AJAX</h1>
+	
+
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
-                    Working with your partner, write functions that take user input.
+					<p>Create a data set of arrays and create objects.</p>
 			</div>
-            
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
-                    I had to fix my button to make it work by looking at my notes.
+					<p> I had to resubmit with a working site</p>
 			</div>
-
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-                    This was fun because I acutally did it right
+					<p> My fetch wasn't working even though it worked locally</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
-                    <!DOCTYPE html>
-<html lang="en">
+					<div id="output">
+						<p> </p>
+					</body>
+					<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Input Example</title>
+  <meta charset="utf-8">
+  <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+  <meta name="viewport" content="width=device-width">
+  <title>JS Bin</title>
 </head>
 <body>
-
-<label for="userInput">Enter Your Name:</label>
-<input type="text" id="userInput">
-<button onclick="showUserInput()">Submit</button>
-
-<script>
-    function showUserInput() {
-        // Get the user input from the input field
-        var userInput = document.getElementById('userInput').value;
-
-        // Display the user input in an alert
-        alert('Hello, ' + userInput + '!');
-    }
-</script>
-
+  <button id='go'>Ready for Dad Jokes</button>
+  <div id='output'></div>
 </body>
 </html>
+						<div id="output"></div>
+					
+					</body>
+					</html>
+						</p>
+					</div>
 			</div>
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
 		</nav>
 	</main>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-<script>
-    // Get the button element by its id
-    var button = document.getElementById('clickMeButton');
-
-    // Add a click event listener to the button
-    button.addEventListener('click', function() {
-        // Display an alert when the button is clicked
-        alert('Stop clicking me');
-    });
-</script>
-
-</body>
-</html>
-
-
-
